packages/components/src/components/Dialog/styles/dialog.module.scss
/* (c) Copyright Frontify Ltd., all rights reserved. */

@use '../../../utilities/sizeToken.module.scss';
@use '../../../utilities/focusStyle.module.scss';
@use '../../../utilities/transitions.module.scss';
@use '../../../utilities/mediaQuery.module.scss';

.content {
    display: block;
    position: fixed;
    left: sizeToken.get(2);
    right: sizeToken.get(2);
    top: 50%;
    transform: translateY(-50%);
    background-color: var(--base-color);
    box-shadow: var(--shadow-matrix);
    border: var(--line-width) solid var(--line-color);
    z-index: 1;
    max-width: var(--dialog-max-width);
    height: fit-content;
    min-height: var(--dialog-min-height);
    max-height: calc(100dvh - 10rem);
    overflow: hidden;
    grid-template-rows: auto auto minmax(0, 1fr) auto;
    box-sizing: border-box;
    color: var(--text-color);

    & {
        @include mediaQuery.sm {
            left: 50%;
            transform: translateX(-50%) translateY(-50%);
            width: max-content;
            min-width: var(--dialog-min-width);
            grid-template-rows: auto minmax(0, 1fr) auto;
            grid-template-columns: min-content auto;
        }
    }

    &:has([data-dialog-layout-component]) {
        display: grid;
    }

    &[data-dialog-vertical-align='top'] {
        top: 5rem;
        transform: translateY(0);

        @include mediaQuery.sm {
            transform: translateX(-50%) translateY(0);
        }
    }

    &[data-dialog-rounded='true'] {
        border-radius: var(--radius-large);
    }

    &[data-dialog-padding='tight'] {
        .header,
        .footer,
        .body {
            padding: sizeToken.get(2);
        }
    }

    &[data-dialog-padding='compact'] {
        .header,
        .footer {
            padding: sizeToken.get(4);
        }

        .body {
            padding: sizeToken.get(2) sizeToken.get(4);
        }
    }

    &[data-dialog-padding='comfortable'] {
        .header,
        .footer {
            padding: sizeToken.get(6);
        }

        .body {
            padding: sizeToken.get(4) sizeToken.get(6);
        }
    }

    &[data-dialog-padding='spacious'] {
        .header,
        .footer {
            padding: sizeToken.get(10);
        }

        .body {
            padding: sizeToken.get(6) sizeToken.get(10);
        }
    }

    .header {
        display: flex;
        height: fit-content;
        justify-content: space-between;
        align-items: center;
        font-weight: var(--heading-weight-number);
        grid-row: 2;
        grid-column: 1;

        &[data-show-border='true'] {
            border-bottom: var(--line-width) solid var(--line-color);
        }

        &[data-dialog-header-padding='none'] {
            padding: sizeToken.get(0);
        }

        &[data-dialog-header-padding='tight'] {
            padding: sizeToken.get(2);
        }

        &[data-dialog-header-padding='compact'] {
            padding: sizeToken.get(4);
        }

        &[data-dialog-header-padding='comfortable'] {
            padding: sizeToken.get(6);
        }

        &[data-dialog-header-padding='spacious'] {
            padding: sizeToken.get(10);
        }

        & {
            @include mediaQuery.sm {
                grid-row: 1;
                grid-column: 2;
            }
        }

        > div {
            width: 100%;
        }
    }

    .body {
        display: flex;
        flex-direction: column;
        max-height: 100%;
        gap: sizeToken.get(4);
        overflow: hidden;
        grid-row: 3;
        grid-column: 1;

        &[data-dialog-body-padding='none'] {
            padding: sizeToken.get(0);
        }

        &[data-dialog-body-padding='tight'] {
            padding: sizeToken.get(2);
        }

        &[data-dialog-body-padding='compact'] {
            padding: sizeToken.get(2) sizeToken.get(4);
        }

        &[data-dialog-body-padding='comfortable'] {
            padding: sizeToken.get(4) sizeToken.get(6);
        }

        &[data-dialog-body-padding='spacious'] {
            padding: sizeToken.get(6) sizeToken.get(10);
        }

        & {
            @include mediaQuery.sm {
                grid-row: 2;
                grid-column: 2;
            }
        }
    }

    .footer {
        display: flex;
        justify-content: flex-end;
        gap: sizeToken.get(2);
        height: fit-content;
        font-weight: var(--font-weight-medium);
        grid-row: 4;
        grid-column: 1;

        &[data-dialog-footer-padding='none'] {
            padding: sizeToken.get(0);
        }

        &[data-dialog-footer-padding='tight'] {
            padding: sizeToken.get(2);
        }

        &[data-dialog-footer-padding='compact'] {
            padding: sizeToken.get(4);
        }

        &[data-dialog-footer-padding='comfortable'] {
            padding: sizeToken.get(6);
        }

        &[data-dialog-footer-padding='spacious'] {
            padding: sizeToken.get(10);
        }

        &[data-show-border='true'] {
            border-top: var(--line-width) solid var(--line-color);
        }

        & {
            @include mediaQuery.sm {
                grid-row: 3;
                grid-column: 2;
            }
        }
    }
}

.underlay {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: rgb(from var(--box-neutral-mighty-color) r g b / 0);
    pointer-events: auto;

    &[data-visible='true'] {
        background-color: rgb(from var(--box-neutral-mighty-color) r g b / 0.5);
    }
}

.sideContent {
    grid-row: 1;
    grid-column: 1;
    min-height: sizeToken.get(10);
    min-width: sizeToken.get(10);

    & {
        @include mediaQuery.sm {
            grid-row: 1 / span 3;
        }
    }
}

